# crib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  crib.sln  crib.vcxproj  crib.vcxproj.filters
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt
examples/chat/: CMakeLists.txt  chat.cpp  chat.h  client.cpp  server.cpp
examples/demo/: CMakeLists.txt  DemoWindow.cpp  DemoWindow.h  main.cpp
examples/demo/hello/: Hello.cpp  Hello.h  hello_d3d12_renderer.cpp  hello_d3d12_renderer.h  hello_scene.cpp  hello_scene.h
examples/demo/hello/shaders/: common.hlsli
examples/demo/hello3d/: Hello3D-Overlay.cpp  Hello3D.cpp  Hello3D.h  hello3d_assets.cpp  hello3d_renderer_3d.h  stats.h
examples/demo/house/: House.cpp  House.h  house_assets.cpp
examples/demo/menu/: Menu.cpp  Menu.h  MenuItem.h  MenuRender.cpp  MenuRender.h
examples/demo/strawman/: Strawman.cpp  Strawman.h  strawman_scene.cpp  strawman_scene.h
examples/demo/tetris/: Tetris.cpp  Tetris.h  tetris_scene.cpp  tetris_scene.h
examples/hello/: CMakeLists.txt  main.cpp
examples/hello2d/: CMakeLists.txt  main.cpp
include/Crib/: Application.h  CameraControl.h  Graphics.h  Window.h
include/Crib/Graphics/: Direct3D11.h  Direct3D12.h
include/Crib/Platform/: POSIX.h  Windows.h
include/crib/: App  File  Graphics  Math  Network
include/crib/Platform/: Win
scenes/: scene_factory.cpp
scenes/hello/: hello_d3d11_renderer.cpp  hello_d3d11_renderer.h  hello_d3d12_renderer.cpp  hello_d3d12_renderer.h  hello_scene.cpp  hello_scene.h
scenes/hello/shaders/: common.hlsli  hello_ps.hlsl  hello_vs.hlsl  pixel.hlsl  vertex.hlsl
scenes/hello3d/: camera.cpp  camera.h  hello3d_assets.cpp  hello3d_d3d11_renderer.cpp  hello3d_d3d11_renderer.h  hello3d_renderer_3d.cpp  hello3d_renderer_3d.h  hello3d_scene.cpp  hello3d_scene.h  mesh.cpp  mesh.h  object.h  pipeline.h  stats.h
scenes/hello3d/shaders/: pixel.hlsl  shared.hlsli
scenes/house/: house_assets.cpp  house_renderer.cpp  house_renderer.h  house_scene.cpp  house_scene.h
scenes/menu/: menu_d3d11_renderer.cpp  menu_d3d11_renderer.h  menu_item.h  menu_scene.cpp  menu_scene.h
scenes/strawman/: strawman_renderer.cpp  strawman_renderer.h  strawman_scene.cpp  strawman_scene.h
scenes/tetris/: tetris_renderer.cpp  tetris_renderer.h  tetris_scene.cpp  tetris_scene.h
src/: CMakeLists.txt  crib.h  main.cpp  pch.h  stdafx.h
src/App/: Window.cpp
src/App/Win/: App.h  App_win.cpp  Window_win.cpp
src/App/Xlib/: App.h  App_x11.cpp  Window_x11.cpp
src/File/: Stream.cpp
src/Graphics/: Camera3D.cpp  ConstantBuffers.h  Font.cpp  Font.h  Light.h  Scene.cpp  Vertex.cpp
src/Graphics/D3D11/: ConstantBuffer.h  Context_dx11.cpp  Drawable_dx11.cpp  Effects_dx11.cpp  Renderer.h
src/Graphics/D3D12/: Context_dx12.cpp  d3dx12.h
src/Graphics/OpenGL/: Context.h  Context_gl.cpp  Context_glx.cpp  Context_wgl.cpp
src/Graphics/Shaders/HLSL/: ps_basic_pcn.hlsl  vs_basic_pcn.hlsl
src/Graphics/Text-Layout/: Font.cpp  Layout.cpp
src/Input/: Buffer.cpp  Buffer.h  Timer.cpp  Timer.h
src/Input/CameraControl/: FirstPerson.cpp  FirstPerson.h  ThirdPerson.cpp  ThirdPerson.h
src/Network/: Socket.cpp
src/Platform/: Error.cpp
src/Platform/CMake/: Compiler-config.cmake  Git-version.cmake
src/Platform/Win/: COM.cpp  Error_win.cpp  String_win.cpp
src/Platform/Windows/: Application_win.cpp  COM.cpp  Error_win.cpp  Window_win.cpp
src/core/: application.cpp  application.h  settings.cpp  settings.h  timer.cpp  timer.h  utility.h  window.cpp  window.h
src/core/utility/: com_initialize.h  redirect_stdout.h  windows_error.h
src/geometry/: definition.cpp  definition.h  mesh.h
src/graphics/: camera_3d.cpp  camera_3d.h  constant_buffers.h  context.cpp  context.h  data_formats.h  light.h  renderer.h
src/graphics/base/: context.cpp  context.h  renderer.h
src/graphics/d3d11/: d3d11_context.cpp  d3d11_context.h  d3d11_renderer.cpp  d3d11_renderer.h
src/graphics/d3d12/: d3d12_context.cpp  d3d12_context.h  d3d12_renderer.h
src/graphics/dx11/: constant_buffer.h  context.h  context_dx11.cpp  effect.h  effect_dx11.cpp  renderer.h  renderer_3d.h  vertex_buffer.h  vertex_buffer_dx11.cpp
src/graphics/dx11/shaders/: common.hlsli  constant_buffers.hlsli  data_formats.hlsli  ps_basic_pcn.hlsl  vs_basic_pcn.hlsl
src/graphics/dx12/: context.h  context_dx12.cpp  renderer.h
src/input/: buffer.cpp  buffer.h  camera_control_first_person.cpp  camera_control_first_person.h  camera_control_third_person.cpp  camera_control_third_person.h  event.h
src/scene/: entity.h  scene.cpp  scene.h  scene_3d.h
src/scene/hello/: hello_d3d11_renderer.cpp  hello_d3d11_renderer.h  hello_d3d12_renderer.cpp  hello_d3d12_renderer.h  hello_scene.cpp  hello_scene.h
src/scene/hello3d/: camera.cpp  camera.h  hello3d_d3d11_renderer.cpp  hello3d_d3d11_renderer.h  hello3d_scene.cpp  hello3d_scene.h  mesh.cpp  mesh.h  model.cpp  model.h  object.h  pipeline.h  stats.h
src/scene/hello3d/shaders/: pixel.hlsl  ps_input.hlsli  shared.hlsli  vertex.hlsl
src/scene/menu/: menu_d3d11_renderer.cpp  menu_d3d11_renderer.h  menu_item.h  menu_scene.cpp  menu_scene.h
src/scenes/: scene_factory.cpp
src/scenes/strawman/: strawman_renderer.cpp  strawman_renderer.h  strawman_scene.cpp  strawman_scene.h
src/scenes/tetris/: tetris_renderer.cpp  tetris_renderer.h  tetris_scene.h
test/: Application.cpp  CMakeLists.txt  Windows.cpp
test/unit/: main.cpp
test/unit/Graphics/: Camera.cpp
test/unit/Math/: Vec_int.cpp
